# hack-2025-agentsql

./: .env.example  PRIVACY_PLAN.md  README.md  TUI_WALKTHROUGH.md  WARP.md  app.py  debug_tui_loader.py  example.py  pyproject.toml  tui_app.py  verify_synthetic.py
docs/: architecture.md
launch/: hack-2025-agentsql.yml
notebooks/: agent_sql_langgraph.ipynb
src/agent_sql/: __init__.py  agent.py  core.py  extensions.py  prompts.py  synthetic.py  tui.py  web_app.py
testdata/csv_test/input_files/: expected_users.csv  input_users.csv  queries.sql
testdata/csv_test/output_files/: output_users.csv
testdata/json_test/input_files/: expected_users.csv  input_users.jsonl  json_queries.sql
